--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title> My Resume</title>
+<title> My Online Resume</title>
 </head>
 <body>
 <img src="Ankit Photo.jpg" height="200">
@@ -8,7 +8,7 @@
 <hr>
 <p> I am very passionate for Technology and I technicaly Sound Good.. i am dedicated to most of time to learn new technoligies and pracise and use in realife.. </p>
 <hr><h2> Objective</h2>
-<p> I am a self motivated person and very decipline person if i take the any resposibily and complete my respobility is my first priority  </p>
+<p> I am a self motivated person and very decipline person if i take the any responsibily and complete my responbility is my first priority  </p>
 <hr><h2> Education</h2> <hr>
 <ul> <li> High School (2015)</li></ul>
 <ul> <li> Entermediate(2017)</li></ul>
@@ -24,7 +24,8 @@
 <ul> <li> CSS</li> </ul>
 <ul> <li> JS</li> </ul>
 <ul> <li> PHP</li> </ul>
-<ul> <li> Bootstrap</li> </ul> <hr>
+<ul> <li> Bootstrap</li> </ul> 
+<ul> <li> Wordprss CMS</li> </ul> <hr>
 <h2> Certification</h2> <hr>
 <ul> <li> Google Digital Marketing</li> </ul>
 <ul> <li> Solo Learn HTML </li> </ul>
